k8s-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-app-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: python-app
  template:
    metadata:
      labels:
        app: python-app
    spec:
      containers:
      - name: python-app
        image: joycookie/python-service:v2
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: python-app-service
spec:
  selector:
    app: python-app
  ports:
    - protocol: TCP
      port: 80
      target_port: 5000
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: info-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: info-service
  template:
    metadata:
      labels:
        app: info-service
    spec:
      containers:
      - name: info-service
        image: joycookie/info-service:v1
        ports:
        - containerPort: 5001
---
apiVersion: v1
kind: Service
metadata:
  name: info-service
spec:
  selector:
    app: info-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5001
  type: ClusterIP
